<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/black"
            android:layout_marginTop="-10dp"
            android:indeterminate="true"
            android:outlineAmbientShadowColor="@color/orange_red" />




        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/"
                    android:text="@string/sign_in_with_email"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextsignin"
                    android:layout_width="match_parent"
                    app:hintEnabled="false"
                    app:hintAnimationEnabled="false"
                    android:layout_marginTop="90dp"
                    app:errorEnabled="true"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:drawableStart="@drawable/ic_emailx"
                        android:textSize="25sp"
                        android:drawablePadding="20dp"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedText_sign_pass"
                    android:layout_width="match_parent"
                    app:hintEnabled="false"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white"
                    app:hintAnimationEnabled="false"
                    app:errorEnabled="true"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/yellow"
                        android:hint="@string/prompt_password"
                        android:drawableStart="@drawable/ic_pass"
                        android:textSize="25sp"
                        android:drawablePadding="20dp"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox"
                    android:text="@string/remember_me"
                    android:backgroundTint="@color/dark_orange"
                    android:buttonTint="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:shadowColor="@color/white"> </CheckBox>

                <Button
                    android:id="@+id/et_bt1"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/stylenew"
                    android:gravity="center"
                    android:fontFamily="@font/"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"> </Button>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/don_t_have_an_account"> </TextView>

                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textStyle="bold"> </TextView>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_pass"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:focusable="true"> </TextView>



            </LinearLayout>
        </ScrollView>




    </LinearLayout>





</RelativeLayout>

